update file html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" maximum-scale="1" user-scalable="no" />
     <link rel="icon" href="img/logo.png">
     <title>Mini-Project</title>
     <link rel="stylesheet" href="css/style.css" />
@@ -157,7 +157,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-4 mb-3">
+          <div class="col-md-6 col-xl-4 mb-3">
             <div class="card shadow">
               <img src="img/produk-1.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
@@ -176,7 +176,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-4 mb-3">
+          <div class="col-md-6 col-xl-4 mb-3">
             <div class="card shadow">
               <img src="img/produk-2.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
@@ -195,7 +195,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-4 mb-3">
+          <div class="col-md-6 col-xl-4 mb-3">
             <div class="card shadow">
               <img src="img/produk-3.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
@@ -214,7 +214,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-4 mb-3">
+          <div class="col-md-6 col-xl-4 mb-3">
             <div class="card shadow">
               <img src="img/produk-4.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
@@ -233,7 +233,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-4 mb-3">
+          <div class="col-md-6 col-xl-4 mb-3">
             <div class="card shadow">
               <img src="img/produk-5.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
@@ -252,7 +252,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-4 mb-3">
+          <div class="col-md-6 col-xl-4 mb-3">
             <div class="card shadow">
               <img src="img/produk-6.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
@@ -465,13 +465,13 @@
               id="carouselTestimoniControls"
               class="carousel slide mx-auto"
               data-bs-ride="carousel"
-              style="width: 80%"
+              style="width: 100%"
             >
               <!-- membuat carousel card -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-12 col-xl-4">
                       <div class="card mt-3">
                         <img
                           src="img/orang1.jpeg"
@@ -489,7 +489,7 @@
                       </div>
                     </div>
   
-                    <div class="col-md-4">
+                    <div class="col-md-12 col-xl-4">
                       <div class="card mt-3">
                         <img
                           src="img/orang2.jpeg"
@@ -507,8 +507,8 @@
                       </div>
                     </div>
   
-                    <div class="col-md-4">
-                      <div class="card mt-3">
+                    <div class="col-md-12 col-xl-4">
+                      <div class="card mt-3 mb-3">
                         <img
                           src="img/orang3.jpeg"
                           class="card-img mx-auto mt-3"
@@ -529,7 +529,7 @@
   
                 <div class="carousel-item">
                   <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-12 col-xl-4">
                       <div class="card mt-3">
                         <img
                           src="img/orang4.jpg"
@@ -546,7 +546,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-12 col-xl-4">
                       <div class="card mt-3">
                         <img
                           src="img/orang5.jpg"
@@ -563,8 +563,8 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-4">
-                      <div class="card mt-3">
+                    <div class="col-md-12 col-xl-4">
+                      <div class="card mt-3 mb-3">
                         <img
                           src="img/orang6.png"
                           class="card-img mx-auto mt-3"
@@ -624,14 +624,13 @@
    </div>
 </div><!-- End -->
 
-
 <div class="container">
    <div class="row text-center justify-content-center mt-5">
 
       <!-- Team item Fahri -->
-      <div class="col-xl-3 col-sm-6 mb-5">
+      <div class="col-xl-2 col-md-12 col-sm- mb-5">
        <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/fahri.jpeg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
-           <h5 class="mb-0">Fahri</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+           <h5 class="mb-0 mt-3">Fahri</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
            <ul class="social mb-0 list-inline mt-3">
                <li class="list-inline-item"><a href="https://www.linkedin.com/in/muhamadfahrii/" class="social-link" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
                <li class="list-inline-item"><a href="https://github.com/muhamadfahrii" class="social-link" target="_blank"><i class="ri-github-fill"></i></a></li>
@@ -641,9 +640,9 @@
    </div><!-- End -->
 
        <!-- Team item Rici -->
-       <div class="col-xl-3 col-sm-6 mb-5">
+       <div class="col-xl-2 col-md-12 col-sm- mb-5">
            <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/rici.jpeg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
-               <h5 class="mb-0">Rici</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+               <h5 class="mb-0 mt-3">Rici</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
                <ul class="social mb-0 list-inline mt-3">
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/rici/" class="social-link" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
                 <li class="list-inline-item"><a href="https://github.com/" class="social-link" target="_blank"><i class="ri-github-fill"></i></a></li>
@@ -651,12 +650,11 @@
                </ul>
            </div>
        </div><!-- End -->
-
-       <div class="row text-center justify-content-center">
+       
            <!-- Team item Serly -->
-       <div class="col-xl-3 col-sm-6 mb-5">
+       <div class="col-xl-2 col-md-12 col-sm- mb-5">
            <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/serly.jpeg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
-               <h5 class="mb-0">Serly</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+               <h5 class="mb-0 mt-3">Serly</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
                <ul class="social mb-0 list-inline mt-3">
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/serlymellina/" class="social-link" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
                 <li class="list-inline-item"><a href="https://github.com/SerlyMellina" class="social-link" target="_blank"><i class="ri-github-fill"></i></a></li>
@@ -666,9 +664,9 @@
        </div><!-- End -->
 
        <!-- Team item Bariza -->
-       <div class="col-xl-3 col-sm-6 mb-5">
+       <div class="col-xl-2 col-md-12 col-sm- mb-5">
            <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/bariza.jpg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
-               <h5 class="mb-0">Bariza</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+               <h5 class="mb-0 mt-3">Bariza</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
                <ul class="social mb-0 list-inline mt-3">
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/bariza-arfadillah-abqariy-230022221/" class="social-link" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
                 <li class="list-inline-item"><a href="https://github.com/barizaarfadillah" class="social-link" target="_blank"><i class="ri-github-fill"></i></a></li>
@@ -678,9 +676,9 @@
        </div><!-- End -->
 
         <!-- Team item Widhiani -->
-       <div class="col-xl-3 col-sm-6 mb-5">
+       <div class="col-xl-2 col-md-12 col-sm- mb-5">
            <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/ani.jpg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
-               <h5 class="mb-0">Widhiani</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+               <h5 class="mb-0 mt-3">Widhiani</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
                <ul class="social mb-0 list-inline mt-3">
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/widhiani-luky-kurniasih" class="social-link" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
                 <li class="list-inline-item"><a href="https://github.com/wilniky" class="social-link" target="_blank"><i class="ri-github-fill"></i></a></li>
@@ -697,7 +695,7 @@
 
   <!-- Start Footer -->
   <footer>
-    <div class="container-fluid mt-4">
+    <div class="container-fluid mt-4 p-0">
         <div class="container-fluid" style="width: 100%; background-color: #cdb988;">
             <div class="row">
                 <div class="col-md-4 text-center">
