melakukan perubahan pada file

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+
+    <!-- Link Koneksi CSS -->
+    <link rel="stylesheet" href="./css/navbar.css">
   </head>
   <body>
     <!-- Navbar -->
@@ -44,7 +47,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="color: red;">
           <div class="navbar-nav ms-auto">
             <a class="nav-link active" href="#">Home</a>
             <a class="nav-link active" href="#about">About</a>
@@ -52,7 +55,7 @@
             <a class="nav-link active" href="#location">Location</a>
             <a class="nav-link active" href="#faq">FAQ</a>
             <a
-              class="nav-link active text-dark rounded text-center"
+              class="nav-link active rounded text-center"
               href="https://wa.link/ga984e"
               target="_blank"
               style="background-color: #cdb988"
