--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <!-- Link Koneksi CSS -->
     <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/layanan.css">
   </head>
   <body>
     <!-- Navbar -->
