menambahkan link koneksi css

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- Link Koneksi CSS -->
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/layanan.css">
+    <link rel="stylesheet" href="./css/fungsi.css">
   </head>
   <body>
     <!-- Navbar -->
@@ -370,12 +371,13 @@
               <div
                 id="collapseThree"
                 class="accordion-collapse collapse"
-                aria-labelledby="#accordionExample">
+                data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   Proses pemesanan berbeda tergantung pada penjualnya. Pada website ini tersedia button di pojok atas <strong>Kanan</strong> untuk anda menghubungi kami jika ingin membeli jajanan yang tersedia.
                 </div>
               </div>
             </div>
+            
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button
