Menambah link style modal

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/layanan.css">
     <link rel="stylesheet" href="./css/fungsi.css">
+    <link rel="stylesheet" href="./css/modal.css">
   </head>
   <body>
     <!-- Navbar -->
