--- a/index.html
+++ b/index.html
@@ -444,12 +444,12 @@
           id="myForm">
             <div class="mb-3">
               <label for="name" class="form-label">Nama</label>
-              <input type="name" class="form-control" autocomplete="off" placeholder="Masukkan Nama Anda" name="name">
+              <input type="name" id="nama" class="form-control" autocomplete="off" placeholder="Masukkan Nama Anda" name="name">
             </div>
             
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" autocomplete="off" placeholder="Masukkan Email Anda" type="email" name="email">
+              <input type="email" id="email" class="form-control" autocomplete="off" placeholder="Masukkan Email Anda" type="email" name="email">
             </div>
           
             <div class="mb-3">
