--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <div class="row">
           <div class="col-md-6 col-xl-4 mb-3">
-            <div class="card shadow">
+            <div class="card shadow" id="produk-item">
               <img src="img/produk-1.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
                 <h5 class="card-title">Risoles</h5>
@@ -187,7 +187,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xl-4 mb-3">
-            <div class="card shadow">
+            <div class="card shadow" id="produk-item">
               <img src="img/produk-2.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
                 <h5 class="card-title">Dadar Gulung</h5>
@@ -206,7 +206,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xl-4 mb-3">
-            <div class="card shadow">
+            <div class="card shadow" id="produk-item">
               <img src="img/produk-3.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
                 <h5 class="card-title">Wajik</h5>
@@ -225,7 +225,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xl-4 mb-3">
-            <div class="card shadow">
+            <div class="card shadow" id="produk-item">
               <img src="img/produk-4.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
                 <h5 class="card-title">Lemper</h5>
@@ -244,7 +244,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xl-4 mb-3">
-            <div class="card shadow">
+            <div class="card shadow" id="produk-item">
               <img src="img/produk-5.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
                 <h5 class="card-title">Pastel</h5>
@@ -263,7 +263,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xl-4 mb-3">
-            <div class="card shadow">
+            <div class="card shadow" id="produk-item">
               <img src="img/produk-6.png" class="card-img-top" alt="about1" />
               <div class="card-body d-flex justify-content-between">
                 <h5 class="card-title">Arem-Arem</h5>
