menambahkan modul di card produk dan testimoni

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/layanan.css">
     <link rel="stylesheet" href="./css/fungsi.css">
+    <link rel="stylesheet" href="./css/card.css">
   </head>
   <body>
     <!-- Navbar -->
@@ -484,7 +485,7 @@
                 <div class="carousel-item active">
                   <div class="row">
                     <div class="col-md-12 col-xl-4">
-                      <div class="card mt-3">
+                      <div class="card mt-3 testimoni-card">
                         <img
                           src="img/orang1.jpeg"
                           class="card-img mx-auto mt-3"
@@ -502,7 +503,7 @@
                     </div>
   
                     <div class="col-md-12 col-xl-4">
-                      <div class="card mt-3">
+                      <div class="card mt-3 testimoni-card">
                         <img
                           src="img/orang2.jpeg"
                           class="card-img mx-auto mt-3"
@@ -520,7 +521,7 @@
                     </div>
   
                     <div class="col-md-12 col-xl-4">
-                      <div class="card mt-3 mb-3">
+                      <div class="card mt-3 mb-3 testimoni-card">
                         <img
                           src="img/orang3.jpeg"
                           class="card-img mx-auto mt-3"
@@ -542,7 +543,7 @@
                 <div class="carousel-item">
                   <div class="row">
                     <div class="col-md-12 col-xl-4">
-                      <div class="card mt-3">
+                      <div class="card mt-3 testimoni-card">
                         <img
                           src="img/orang4.jpg"
                           class="card-img mx-auto mt-3"
@@ -559,7 +560,7 @@
                       </div>
                     </div>
                     <div class="col-md-12 col-xl-4">
-                      <div class="card mt-3">
+                      <div class="card mt-3 testimoni-card">
                         <img
                           src="img/orang5.jpg"
                           class="card-img mx-auto mt-3"
@@ -576,7 +577,7 @@
                       </div>
                     </div>
                     <div class="col-md-12 col-xl-4">
-                      <div class="card mt-3 mb-3">
+                      <div class="card mt-3 mb-3 testimoni-card">
                         <img
                           src="img/orang6.png"
                           class="card-img mx-auto mt-3"
