--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
 
     <!-- FAQ -->
     <section id="faq">
+      <div class="container">
       <div class="row text-center mt-5">
         <div class="col">
           <h2 style="font-weight: bold; margin-top: 100px">Anda punya pertanyaan?</h2>
@@ -425,6 +426,7 @@
             </div>
           </div>
         </div>
+      </div>
       </div>
     </section>
     <!-- End FAQ -->
