menambahkan class font size

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;0,300;0,&display=swap"
       rel="stylesheet"
     />
     <link
@@ -117,8 +117,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mt-5">
-            <h2 style="font-weight: bold; margin-top: 50px">Pelayanan Kami</h2>
-            <span class="sub-title">
+            <h2 class="font-large" style="font-weight: bold; margin-top: 50px">Pelayanan Kami</h2>
+            <span class="sub-title font-medium">
               Kualitas Produk Adalah Prioritas Kami, Dan Selalu Menjamin
               <br />Halal Dan Keamanan Hingga Sampai Di Tangan Anda.</span
             >
@@ -165,7 +165,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col mt-5">
-            <h2 style="font-weight: bold; margin-top: 50px">Aneka Jajanan</h2>
+            <h2 class="font-large" style="font-weight: bold; margin-top: 50px">Aneka Jajanan</h2>
           </div>
         </div>
         <div class="row">
@@ -296,7 +296,7 @@
       <div class="container">
         <div class="row text-center mt-5">
           <div class="col">
-            <h2 style="font-weight: bold; margin-top: 100px;">Map Lokasi</h2>
+            <h2 class="font-large" style="font-weight: bold; margin-top: 100px;">Map Lokasi</h2>
           </div>
         </div>
     
@@ -317,7 +317,7 @@
       <div class="container">
       <div class="row text-center mt-5">
         <div class="col">
-          <h2 style="font-weight: bold; margin-top: 100px">Anda punya pertanyaan?</h2>
+          <h2 class="font-large" style="font-weight: bold; margin-top: 100px">Anda punya pertanyaan?</h2>
         </div>
       </div>
       <div class="row">
@@ -437,7 +437,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mt-5">
-            <h2 style="font-weight: bold; margin-top: 50px">Kontak Kami</h2>
+            <h2 class="font-large" style="font-weight: bold; margin-top: 50px">Kontak Kami</h2>
           </div>
         </div>
   
@@ -476,7 +476,7 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col text-center">
-            <h2 style="font-weight: bold; margin-top: 100px">Testimoni</h2>
+            <h2 class="font-large" style="font-weight: bold; margin-top: 100px">Testimoni</h2>
             <div
               id="carouselTestimoniControls"
               class="carousel slide mx-auto"
@@ -635,7 +635,7 @@
     <div class="container">
    <div class="row text-center">
        <div class="col mt-5">
-           <h2 style="font-weight: bold; margin-top: 100px">Our Team</h2>
+           <h2 class="font-large" style="font-weight: bold; margin-top: 100px">Our Team</h2>
        </div>
    </div>
 </div><!-- End -->
@@ -735,7 +735,7 @@
             </div>
             <div class="row">
                 <div class="text-center">
-                    <p class="text-dark" style="font-size: 10px; font-weight: 700;">@Copyright 2023 Jajanan Pasar. All Rights Reserved</p>
+                    <p class="text-dark font-small" style=" font-weight: 700;">@Copyright 2023 Jajanan Pasar. All Rights Reserved</p>
                 </div>
             </div>
         </div>
