menambah nama class di team

--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
    <div class="row text-center justify-content-center mt-5">
 
       <!-- Team item Fahri -->
-      <div class="col-xl-2 col-md-12 col-sm- mb-5">
+      <div class="col-xl-2 col-md-12 col-sm- mb-5 team-member-Fahri">
        <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/fahri.jpeg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
            <h5 class="mb-0 mt-3">Fahri</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
            <ul class="social mb-0 list-inline mt-3">
@@ -656,7 +656,7 @@
    </div><!-- End -->
 
        <!-- Team item Rici -->
-       <div class="col-xl-2 col-md-12 col-sm- mb-5">
+       <div class="col-xl-2 col-md-12 col-sm- mb-5 team-member-Rici">
            <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/rici.jpeg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
                <h5 class="mb-0 mt-3">Rici</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
                <ul class="social mb-0 list-inline mt-3">
@@ -668,7 +668,7 @@
        </div><!-- End -->
        
            <!-- Team item Serly -->
-       <div class="col-xl-2 col-md-12 col-sm- mb-5">
+       <div class="col-xl-2 col-md-12 col-sm- mb-5 team-member-Serly">
            <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/serly.jpeg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
                <h5 class="mb-0 mt-3">Serly</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
                <ul class="social mb-0 list-inline mt-3">
@@ -680,7 +680,7 @@
        </div><!-- End -->
 
        <!-- Team item Bariza -->
-       <div class="col-xl-2 col-md-12 col-sm- mb-5">
+       <div class="col-xl-2 col-md-12 col-sm- mb-5 team-member-Bariza">
            <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/bariza.jpg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
                <h5 class="mb-0 mt-3">Bariza</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
                <ul class="social mb-0 list-inline mt-3">
@@ -692,7 +692,7 @@
        </div><!-- End -->
 
         <!-- Team item Widhiani -->
-       <div class="col-xl-2 col-md-12 col-sm- mb-5">
+       <div class="col-xl-2 col-md-12 col-sm- mb-5 team-member-Widhiani">
            <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/ani.jpg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
                <h5 class="mb-0 mt-3">Widhiani</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
                <ul class="social mb-0 list-inline mt-3">
