--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mt-5">
-            <h2 class="font-large" style="font-weight: bold; margin-top: 50px">Pelayanan Kami</h2>
+            <h2 class="font-large font-semibold" style="margin-top: 50px">Pelayanan Kami</h2>
             <span class="sub-title font-medium">
               Kualitas Produk Adalah Prioritas Kami, Dan Selalu Menjamin
               <br />Halal Dan Keamanan Hingga Sampai Di Tangan Anda.</span
@@ -165,7 +165,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col mt-5">
-            <h2 class="font-large" style="font-weight: bold; margin-top: 50px">Aneka Jajanan</h2>
+            <h2 class="font-large font-semibold" style="margin-top: 50px">Aneka Jajanan</h2>
           </div>
         </div>
         <div class="row">
@@ -296,7 +296,7 @@
       <div class="container">
         <div class="row text-center mt-5">
           <div class="col">
-            <h2 class="font-large" style="font-weight: bold; margin-top: 100px;">Map Lokasi</h2>
+            <h2 class="font-large font-semibold" style="margin-top: 100px;">Map Lokasi</h2>
           </div>
         </div>
     
@@ -317,7 +317,7 @@
       <div class="container">
       <div class="row text-center mt-5">
         <div class="col">
-          <h2 class="font-large" style="font-weight: bold; margin-top: 100px">Anda punya pertanyaan?</h2>
+          <h2 class="font-large font-semibold" style="margin-top: 100px">Anda punya pertanyaan?</h2>
         </div>
       </div>
       <div class="row">
@@ -437,7 +437,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mt-5">
-            <h2 class="font-large" style="font-weight: bold; margin-top: 50px">Kontak Kami</h2>
+            <h2 class="font-large font-semibold" style="margin-top: 50px">Kontak Kami</h2>
           </div>
         </div>
   
@@ -476,7 +476,7 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col text-center">
-            <h2 class="font-large" style="font-weight: bold; margin-top: 100px">Testimoni</h2>
+            <h2 class="font-large font-semibold" style="margin-top: 100px">Testimoni</h2>
             <div
               id="carouselTestimoniControls"
               class="carousel slide mx-auto"
@@ -635,7 +635,7 @@
     <div class="container">
    <div class="row text-center">
        <div class="col mt-5">
-           <h2 class="font-large" style="font-weight: bold; margin-top: 100px">Our Team</h2>
+           <h2 class="font-large font-semibold" style="margin-top: 100px">Our Team</h2>
        </div>
    </div>
 </div><!-- End -->
