menambahkan for di footer

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="./css/fungsi.css">
     <link rel="stylesheet" href="./css/card.css">
     <link rel="stylesheet" href="./css/perulangan.css">
+    <link rel="stylesheet" href ="./css/footer.css">
+    <link rel="stylesheet" href ="./css/ourteam.css">
   </head>
   <body>
     <!-- Navbar -->
@@ -726,9 +728,9 @@
                     <h1 class="mt-4 text-dark fs-5 text-center" style="font-weight: bold;">Follow Us</h1>
                     <div class="d-flex justify-content-center">
                         <p>
-                          <a href="#" style="margin-right: 10px;"><img src="img/instagram.png" width="30px" alt=""></a>
-                          <a href="#" style="margin-right: 10px;"><img src="img/facebook.png" width="30px" alt=""></a>
-                          <a href="#"><img src="img/twitter.png" width="30px" alt=""></a>
+                          <a class="sosmed" href="#" style="margin-right: 10px;"><img src="img/instagram.png" width="30px" alt=""></a>
+                          <a class="sosmed" href="#" style="margin-right: 10px;"><img src="img/facebook.png" width="30px" alt=""></a>
+                          <a class="sosmed" href="#"><img src="img/twitter.png" width="30px" alt=""></a>
                         </p>
                     </div>
                 </div>
