--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
     <script src="script.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;0,300;0,&display=swap"
       rel="stylesheet"
@@ -34,6 +27,10 @@
     <link rel="stylesheet" href="./css/perulangan.css">
     <link rel="stylesheet" href ="./css/footer.css">
     <link rel="stylesheet" href ="./css/ourteam.css">
+
+    <link rel="stylesheet" href="bootstrap-5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap-5.3.2/dist/css/bootstrap.css">
+    link
   </head>
   <body>
     <!-- Navbar -->
@@ -180,10 +177,10 @@
               </div>
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
-                  class="btn btn-sm rounded"
+                  class="btn btn-cream btn-sm rounded"
                   data-bs-toggle="modal" 
                   data-bs-target="#risolesmodal"
-                  style="background-color: #cdb988; font-weight: bold"
+                  style="font-weight: bold;"
                 >
                   Cek Detail
                 </button>
@@ -199,10 +196,10 @@
               </div>
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
-                  class="btn btn-sm rounded"
+                  class="btn btn-cream btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#dadargulungmodal"
-                  style="background-color: #cdb988; font-weight: bold"
+                  data-bs-target="#risolesmodal"
+                  style="font-weight: bold;"
                 >
                   Cek Detail
                 </button>
@@ -218,10 +215,10 @@
               </div>
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
-                  class="btn btn-sm rounded"
+                  class="btn btn-cream btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#wajikmodal"
-                  style="background-color: #cdb988; font-weight: bold"
+                  data-bs-target="#risolesmodal"
+                  style="font-weight: bold;"
                 >
                   Cek Detail
                 </button>
@@ -237,10 +234,10 @@
               </div>
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
-                  class="btn btn-sm rounded"
+                  class="btn btn-cream btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#lempermodal"
-                  style="background-color: #cdb988; font-weight: bold"
+                  data-bs-target="#risolesmodal"
+                  style="font-weight: bold;"
                 >
                   Cek Detail
                 </button>
@@ -256,10 +253,10 @@
               </div>
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
-                  class="btn btn-sm rounded"
+                  class="btn btn-cream btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#pastelmodal"
-                  style="background-color: #cdb988; font-weight: bold"
+                  data-bs-target="#risolesmodal"
+                  style="font-weight: bold;"
                 >
                   Cek Detail
                 </button>
@@ -275,10 +272,10 @@
               </div>
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
-                  class="btn btn-sm rounded"
+                  class="btn btn-cream btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#aremaremmodal"
-                  style="background-color: #cdb988; font-weight: bold"
+                  data-bs-target="#risolesmodal"
+                  style="font-weight: bold;"
                 >
                   Cek Detail
                 </button>
@@ -938,10 +935,6 @@
     </section>
   <!-- End Popup Modal Produk -->
   
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
+    <script src="bootstrap-5.3.2/dist/js/bootstrap.bundle.js"></script>
   </body>
 </html>
