menambahkan fitur back to top

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Link Koneksi CSS -->
     <link rel="stylesheet" href="./css/navbar.css">
@@ -934,6 +935,17 @@
     </div>
     </section>
   <!-- End Popup Modal Produk -->
+
+  <!-- Back to top -->
+  <button
+        type="button"
+        class="btn btn-floating btn-lg"
+        id="btn-back-to-top"
+        style="background-color: #cab686;"
+        >
+  <i class="fas fa-arrow-up"></i>
+  </button>
+  <!-- END Back to top -->
   
     <script src="bootstrap-5.3.2/dist/js/bootstrap.bundle.js"></script>
   </body>
