menambahkan effect animasi

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <link rel="stylesheet" href="bootstrap-5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-5.3.2/dist/css/bootstrap.css">
-    link
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
     <!-- Navbar -->
@@ -113,7 +113,7 @@
     <!-- End Carousel -->
 
     <!-- Layanan -->
-    <section id="about">
+    <section data-aos="fade-down-right" id="about">
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mt-5">
@@ -161,7 +161,7 @@
     <!-- End Layanan -->
 
     <!-- Produk -->
-    <section id="produk">
+    <section data-aos="fade-down-left" id="produk">
       <div class="container">
         <div class="row text-center">
           <div class="col mt-5">
@@ -288,11 +288,8 @@
     </section>
     <!-- End Produk -->
 
-    <!-- Modal -->
-    <!-- Modal End -->
-
     <!-- Location -->
-    <section id="location">
+    <section data-aos="flip-right" id="location">
       <div class="container">
         <div class="row text-center mt-5">
           <div class="col">
@@ -948,5 +945,6 @@
   <!-- END Back to top -->
   
     <script src="bootstrap-5.3.2/dist/js/bootstrap.bundle.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 </html>
