mengubah target modal

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <button
                   class="btn btn-cream btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#risolesmodal"
+                  data-bs-target="#dadargulungmodal"
                   style="font-weight: bold;"
                 >
                   Cek Detail
@@ -218,7 +218,7 @@
                 <button
                   class="btn btn-cream btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#risolesmodal"
+                  data-bs-target="#wajikmodal"
                   style="font-weight: bold;"
                 >
                   Cek Detail
@@ -237,7 +237,7 @@
                 <button
                   class="btn btn-cream btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#risolesmodal"
+                  data-bs-target="#lempermodal"
                   style="font-weight: bold;"
                 >
                   Cek Detail
@@ -256,7 +256,7 @@
                 <button
                   class="btn btn-cream btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#risolesmodal"
+                  data-bs-target="#pastelmodal"
                   style="font-weight: bold;"
                 >
                   Cek Detail
@@ -275,7 +275,7 @@
                 <button
                   class="btn btn-cream btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#risolesmodal"
+                  data-bs-target="#aremaremmodal"
                   style="font-weight: bold;"
                 >
                   Cek Detail
