menambah atribut target pada preform

--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
             <form  action="https://formspree.io/f/maygpdwj"
           method="POST"
           class="contact-form"
+          target="_blank"
           id="myForm">
             <div class="mb-3">
               <label for="name" class="form-label">Nama</label>
