mengubah maps lokasi dan nomor whatsapp

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a class="nav-link active" href="#faq">FAQ</a>
             <a
               class="nav-link active rounded text-center"
-              href="https://wa.link/ga984e"
+              href="https://wa.link/7i9xde"
               target="_blank"
               style="background-color: #cdb988"
               >🛒Order Now</a
@@ -302,7 +302,7 @@
             </div>
           </div>
           <div class="col">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.9839160329857!2d107.59486667464789!3d-6.892526793106605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e660ac99d8ff%3A0xb75346d5a9f9f2cb!2sJl.%20Sukajadi%20No.80%2C%20Cipedes%2C%20Kec.%20Sukajadi%2C%20Kota%20Bandung%2C%20Jawa%20Barat%2040162!5e0!3m2!1sen!2sid!4v1695190336671!5m2!1sen!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.231609207656!2d106.84899857411519!3d-6.36406439362602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ec68c6175133%3A0xb70333f315a9c0b2!2sJl.%20H.%20Abdul%20Mutholib%20No.20%2C%20Tugu%2C%20Kec.%20Cimanggis%2C%20Kota%20Depok%2C%20Jawa%20Barat%2016451!5e0!3m2!1sid!2sid!4v1696692611249!5m2!1sid!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
@@ -718,7 +718,7 @@
                 </div>
                 <div class="col-md-4">
                     <h1 class="mt-4 text-dark fs-5 text-center" style="font-weight: bold;">Our Location</h1>
-                    <p class="text-center style="font-size: 12px;">Jl. Sukajadi No.80, Cipedes, Kec. Sukajadi, <br>Kota Bandung, Jawa Barat 40162</p>
+                    <p class="text-center style="font-size: 12px;">Pertigaan JL. H. Abd. Mutholib Kp. Areman RT04/RW08<br>Tugu Cimanggis Depok, Jawa Barat</p>
                 </div>
                 <div class="col-md-4 d-flex flex-column align-items-center">
                     <h1 class="mt-4 text-dark fs-5 text-center" style="font-weight: bold;">Follow Us</h1>
