--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" maximum-scale="1" user-scalable="no" />
     <link rel="icon" href="img/logo.png">
-    <title>Mini-Project</title>
+    <title>Jajanan Pasar</title>
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
