--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
     <link rel="stylesheet" href="bootstrap-5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-5.3.2/dist/css/bootstrap.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
     <!-- Navbar -->
@@ -113,7 +112,7 @@
     <!-- End Carousel -->
 
     <!-- Layanan -->
-    <section data-aos="fade-down-right" id="about">
+    <section id="about">
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mt-5">
@@ -161,7 +160,7 @@
     <!-- End Layanan -->
 
     <!-- Produk -->
-    <section data-aos="fade-down-left" id="produk">
+    <section id="produk">
       <div class="container">
         <div class="row text-center">
           <div class="col mt-5">
@@ -289,7 +288,7 @@
     <!-- End Produk -->
 
     <!-- Location -->
-    <section data-aos="flip-right" id="location">
+    <section id="location">
       <div class="container">
         <div class="row text-center mt-5">
           <div class="col">
@@ -946,6 +945,5 @@
   <!-- END Back to top -->
   
     <script src="bootstrap-5.3.2/dist/js/bootstrap.bundle.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 </html>
